// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot of the base state 1`] = `
<DocumentFragment>
  <div>
    <button
      aria-controls="select-list"
      aria-haspopup="true"
      data-testid="SelectButton"
    >
      <p
        class="undefined undefined"
      >
        Please select an option
      </p>
      <svg
        class="h-6 w-6' undefined undefined"
        fill="none"
        height="1rem"
        stroke="currentColor"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 9l-7 7-7-7"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`snapshot of the options menu open state 1`] = `
<DocumentFragment>
  <div>
    <button
      aria-controls="select-list"
      aria-expanded="true"
      aria-haspopup="true"
      data-testid="SelectButton"
    >
      <p
        class="undefined undefined"
      >
        Please select an option
      </p>
      <svg
        class="h-6 w-6' undefined undefined"
        fill="none"
        height="1rem"
        stroke="currentColor"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 9l-7 7-7-7"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </button>
    <ul
      id="select-list"
      style="top: 10px;"
    >
      <li
        aria-label="Strict Black"
        class="undefined  "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="undefined undefined"
        >
          Strict Black
        </p>
      </li>
      <li
        aria-label="Heavenly Green"
        class="undefined  "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="undefined undefined"
        >
          Heavenly Green
        </p>
      </li>
      <li
        aria-label="Sweet Pink"
        class="undefined  "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="undefined undefined"
        >
          Sweet Pink
        </p>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`snapshot of the selected option state 1`] = `
<DocumentFragment>
  <div>
    <button
      aria-controls="select-list"
      aria-haspopup="true"
      data-testid="SelectButton"
    >
      <p
        class="undefined undefined"
      >
        Strict Black
      </p>
      <svg
        class="h-6 w-6' undefined undefined"
        fill="none"
        height="1rem"
        stroke="currentColor"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 9l-7 7-7-7"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;
